add / edit / remove possible

--- a/NewsApp-war/web/setUserBasket.html
+++ b/NewsApp-war/web/setUserBasket.html
@@ -6,15 +6,11 @@
     </head>
 
     <body>
-        <h2>User Input Form</h2>
-         <h2>User Input Form</h2>
-          <h2>User Input Form</h2>
-           <h2>User Input Form</h2>
-            <h2>User Input Form</h2>
-        <form method="post" action="BasketMsg">
+        <h2>User Basket Form</h2>
+        <form method="post" action="SetUserBasketMsg">
             <fieldset>
                 <legend>Personal Particular 2</legend>
-                Name: <input type="text" name="name" /><br /><br />
+                Basket name: <input type="text" name="name" /><br /><br />
             </fieldset>
 
             <input type="submit" value="SEND" />
