show/set/add bank/basket fixed

--- a/NewsApp-war/web/login/newlogin.html
+++ b/NewsApp-war/web/login/newlogin.html
@@ -20,7 +20,7 @@ and open the template in the editor.
     <body>
         <div>You have been logged out</div>
         <div>Please sign in again</div>
-        <a href="login/login.html"> 
+        <a href="/NewsApp-war/login/login.html"> 
         <input type="submit" class="button" value="Login page">
         </a>
             
