add item / fix filter / fix front

--- a/NewsApp-war/web/settings/settings.html
+++ b/NewsApp-war/web/settings/settings.html
@@ -7,10 +7,10 @@
 
     <body>
         <h2>ADMIN CONSOLE: User Settings Form</h2>
-        <form method="post" action="UserPasswordkMsg">
+        <form method="post" action="/NewsApp-war/UserPasswordMsg">
             <fieldset>
                 <legend>$ EXEC CONSOLE</legend>
-                New password: <input type="text" name="password" /><br /><br />
+                New password: <input type="password" name="password" /><br /><br />
             </fieldset>
 
             <input type="submit" value="EXECUTE" />
